--- a/rising/default-improved-rising.css
+++ b/rising/default-improved-rising.css
@@ -408,18 +408,18 @@ h6 {
     line-height: 1.2
 }
 
-.centerText .h1,
-.centerText .h2,
-.centerText .h3,
-.centerText .h4,
-.centerText .h5,
-.centerText .h6,
-.centerText h1,
-.centerText h2,
-.centerText h3,
-.centerText h4,
-.centerText h5,
-.centerText h6 {
+#characterView .h1,
+#characterView .h2,
+#characterView .h3,
+#characterView .h4,
+#characterView .h5,
+#characterView .h6,
+#characterView h1,
+#characterView h2,
+#characterView h3,
+#characterView h4,
+#characterView h5,
+#characterView h6 {
 	margin-bottom: 10px;
     font-weight: 700;
     line-height: 1.2;
@@ -454,33 +454,33 @@ h6 {
     font-size: 1rem
 }
 
-.centerText .h1,
-.centerText h1 {
+#characterView .h1,
+#characterView h1 {
     font-size: 2em
 }
 
-.centerText .h2,
-.centerText h2 {
+#characterView .h2,
+#characterView h2 {
     font-size: 1.17em
 }
 
-.centerText .h3,
-.centerText h3 {
+#characterView .h3,
+#characterView h3 {
     font-size: 1.17rem
 }
 
-.centerText .h4,
-.centerText h4 {
+#characterView .h4,
+#characterView h4 {
     font-size: 1em
 }
 
-.centerText .h5,
-.centerText h5 {
+#characterView .h5,
+#characterView h5 {
     font-size: 0.83rem
 }
 
-.centerText .h6,
-.centerText h6 {
+#characterView .h6,
+#characterView h6 {
     font-size: 0.67em
 }
 
@@ -6967,7 +6967,9 @@ button.bg-dark:hover {
     cursor: pointer
 }
 
-.character-page-avatar {
+.character-page-avatar {	
+    max-height: 100px;
+    max-width: 100px
     height: 100px;
     width: 100px
 }
@@ -7344,7 +7346,7 @@ div.indentText {
     display: inline;
     max-height: 100px;
     max-width: 100px;
-    max-height: 100px;
+    height: 100px;
     width: 100px
 }
 
@@ -7353,7 +7355,7 @@ div.indentText {
     width: 50px;
 }
 
-.centerText .character-avatar.icon {
+#characterView .character-avatar.icon {
 	margin-right: 2px;
 }
 
@@ -7366,6 +7368,8 @@ div.indentText {
 }
 
 .bbcode-collapse-header {
+	padding: 3px 25px 3px 25px;
+	font-size: 1.2em;
     font-weight: 700;
     cursor: pointer;
     width: 100%;
